# esindy-from-scratch

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: benchmarks.md
docs/plan/: esindy_plan.md
esindy/: __init__.py  _seed.py  datasets.py  differentiation.py  ensemble.py  equations.py  experiments.py  library.py  metrics.py  model.py  optimizers.py  viz.py  weak.py
scripts/: benchmark_ensemble.py  make_figures.py
tests/: test_basis_miss.py  test_datasets.py  test_differentiation.py  test_ensemble.py  test_equations.py  test_library.py  test_metrics.py  test_model.py  test_noise.py  test_optimizers.py  test_oracle.py  test_parallel.py  test_smoke.py  test_viz.py  test_weak.py
