[project]
name = "esindy"
version = "0.0.1"
description = "Ensemble-SINDy from scratch, developed test-first"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "joblib>=1.3",
]

[project.optional-dependencies]
# `pysindy` is only used as a reference oracle in tests marked @pytest.mark.oracle.
# Kept optional so the core suite never depends on it.
oracle = ["pysindy>=1.7"]
viz = ["matplotlib>=3.8"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.6",
    "pre-commit>=3.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["esindy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "oracle: tests that compare against PySINDy (requires the 'oracle' extra)",
    "slow: statistical / sweep tests that take longer to run",
]

[tool.coverage.run]
source = ["esindy"]
branch = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "NPY"]
